<?xml version="1.0"?>
<package format="2">
  <name>data_bridge_tools</name>
  <version>0.0.1</version>
  <description>Simple tools for briding between ROS2 and standard protocols such as USB Serial and TCP data sources.</description>
  <maintainer email="p96.smith@qut.edu.au">Peter Smith</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
</package>